# libwpcp

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  travis_build.sh
cmake/: FindCheck.cmake  FindLibWebSockets.cmake  FindSubunit.cmake
example/: example.c
include/: wpcp.h  wpcp_lws.h  wpcp_lws_main.h
src/: wpcp.c  wpcp_cbor.c  wpcp_cbor.h  wpcp_lws.c  wpcp_lws_main.c  wpcp_session.c  wpcp_session.h  wpcp_util.h
test/: test.c  test.h  test_cbor_read_buffer.c  test_cbor_write.c  test_cbor_write_buffer.c  test_session.c  test_wpcp.c
win32compat/: stdbool.h
